welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:8: error: '(' expected but '{' found.
  if {a==b || a==c || b==c}{
     ^greenTicket:11: error: illegal start of simple expression
} 
^