welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
  if (a!=b && a!=b && b!=c){
    return 0
  }
  if (a==b && b==c){
    return 20
  }
  if {a==b || a==c || b==c}{
    return 10
  }
}